--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/scrollmagic": "^2.0.8",
     "next": "14.0.4",
     "react": "^18",
     "react-burger-menu": "^3.0.9",
